# vitalscore

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
tests/: test_scores.py
vitalscore/: __init__.py  batch.py  cli.py
vitalscore/models/: __init__.py  assessment.py
vitalscore/scores/: __init__.py  apgar.py  avpu.py  gcs.py  heart.py  news2.py  qsofa.py  start.py
