[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vitalscore"
version = "0.1.0"
description = "Clinical scoring calculators: GCS, AVPU, APGAR, START, NEWS2, qSOFA, HEART"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["clinical", "medical", "triage", "scoring", "EMS", "GCS", "NEWS2"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
vitalscore = "vitalscore.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vitalscore*"]
