[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vitalscore"
version = "0.1.0"
description = "Clinical scoring calculators: GCS, AVPU, APGAR, START, NEWS2, qSOFA, HEART"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["clinical", "medical", "triage", "scoring", "EMS", "GCS", "NEWS2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
vitalscore = "vitalscore.cli:main"

[project.urls]
Homepage = "https://github.com/Londopy/vitalscore"
Repository = "https://github.com/Londopy/vitalscore"
"Bug Tracker" = "https://github.com/Londopy/vitalscore/issues"
Disclaimer = "https://github.com/Londopy/vitalscore/blob/main/DISCLAIMER.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["vitalscore*"]
